reformat program requirements

--- a/examples/number-guesser/index.html
+++ b/examples/number-guesser/index.html
@@ -1,6 +1,12 @@
-<p>Your task is to write a simple number guessing game. The program should ask the user for their name and refer to the user by name for the duration of the session. The user should be prompted for a guess in a predefined interval that is specified for the user. The user should be continuously prompted for guesses until they guess the correct answer. They should be provided with feedback about the guess (whether it's too high or low). They should also be notified if the guess is outside the allowable range.
-
-Once the correct number is guessed, a new game should be started.</p>
+<p>Your task is to write a simple number guessing game. The program's specifications are as follows:</p>
+  <ul>
+    <li>The program should ask the user for their name and refer to the user by name for the duration of the session.</li>
+    <li>The user should be prompted for a guess in a predefined interval that is provided to the user.</li>
+    <li>The user should be continuously prompted for guesses until they guess the correct answer.</li>
+    <li>The user should be provided with feedback about the guess (whether it's too high or low).</li>
+    <li>The user should also be notified if the guess is outside the allowable range.</li>
+  </ul>
+<p>Once the correct number is guessed, a new game should be started.</p>
 
 <p>As an example, consider the following game: </p>
 <p></p>
