--- a/examples/temperature_convertor/index.html
+++ b/examples/temperature_convertor/index.html
@@ -1,6 +1,6 @@
 <p>
 	In 1724, physicist Daniel Gabriel Fahrenheit proposed a temperature scale, the Fahrenheit scale.
-  <br>The Celsius scale, is also a temperature scale but serves as an SI derived unit, and hence used worldwide.
+  <br>The Celsius scale is also a temperature scale which serves as an SI derived unit, and hence used worldwide.
 </p>
 <br>
 <p>
@@ -19,4 +19,8 @@
   Use the following formulae for the conversions:<br>
   <b>celsius = (fahrenheit - 32) * 5/9</b><br>
   <b>fahrenheit = (celsius * 9/5) + 32</b>
+</p>
+<br>
+<p>
+	<b>NOTE:</b> Take in a real number from the user and not an integer for the temperature.
 </p>
