--- a/examples/temperature_convertor/index.html
+++ b/examples/temperature_convertor/index.html
@@ -7,6 +7,7 @@
   Some countries still continue to use the Fahrenheit scale over the Celsius scale.
   <br>Write a program that takes in a choice from the user, fahrenheit to celsius or vice versa.
   <br>Read in the appropriate temperature and output the converted temperature.
+	<br>You can assume the user will only type a real number.
 </p>
 <br>
 
