feat: screenshot file changed

--- a/en/leap-year/index.html
+++ b/en/leap-year/index.html
@@ -79,13 +79,13 @@
             if year % 100 == 0:
 				# checking whether the provided year is evenly divisibly by 400
                 if year % 400 == 0:
-                    print(&#039;Given year {} is a leap year&#039;.format(year))
+                    print(&#039;A given year {} is a leap year&#039;.format(year))
                 else:
-                    print(&#039;Given year {} is NOT a leap year&#039;.format(year))
+                    print(&#039;A given year {} is NOT a leap year&#039;.format(year))
             else:
-                print(&#039;Given year {} is a leap year&#039;.format(year))
+                print(&#039;A given year {} is a leap year&#039;.format(year))
         else:
-            print(&#039;Given year {} is NOT a leap year&#039;.format(year))
+            print(&#039;A given year {} is NOT a leap year&#039;.format(year))
 		
 		# just printing dashes in order to seperate results in the console
         print(&#039;--------------------&#039;)
