Corrected a typo in the 13coins problem description.

--- a/examples/13coins/index.html
+++ b/examples/13coins/index.html
@@ -1,5 +1,5 @@
 <p>
-    You are presented with 13 coins, all but one is defective, hence having a different weight from the others. However, you do not know whether the defective coin is heavier or lighter than normal. Given 3 chances to compare their weights on a balance, how do you find out the defective coin?
+    You are presented with 13 coins, all but one has the same weight. However, you do not know whether the defective coin is heavier or lighter than the others. Given 3 chances to compare their weights on a balance, how do you find out the defective coin?
 </p>
 
 <p> 
