added example. personality quiz

--- a/en/how-much-TP/index.html
+++ b/en/how-much-TP/index.html
@@ -41,7 +41,7 @@
 </p>
 				<hr/>
 				<p>
-One of the most interesting phenomenon in the beginning of this global health crisis is the hoarding of toilet paper. Discussions on the amount of toilet paper used per day between London based Software Developer Ben Sasson and Artist Sam Harris gave birth to howmuchtoiletpaper.com. In it, users can input the amount of rolls users have and the mount of toilet visit per day. The two inputs then get calculated into the equation: 160 sheets per roll × rolls users have / (6 sheets per visit × toilet visits per day) to produce the output on how long will the supply of their toilet paper last. </p>
+One of the most interesting phenomenon in the beginning of this global health crisis is the hoarding of toilet paper. Discussions on the amount of toilet paper used per day between London based Software Developer Ben Sasson and Artist Sam Harris gave birth to howmuchtoiletpaper.com. In it, users can input the amount of rolls users have and the mount of toilet visit per day. The two inputs then get calculated into the equation: 160 sheets per roll Ã— rolls users have / (6 sheets per visit Ã— toilet visits per day) to produce the output on how long will the supply of their toilet paper last. </p>
 
 <p>
 	The website has garnered over 12 million visitors and many publicities. Just for fun, write a program that reads in the amount of rolls users have and the amount of toilet visit per day and outputs the number of days will their supply of toilet paper last for. Here is an example execution of the program:
