--- a/en/number-guessing-game/index.html
+++ b/en/number-guessing-game/index.html
@@ -91,7 +91,7 @@ def main():
         target = random.randint(MIN_NUMBER, MAX_NUMBER)
 
         # initialize a variable for the user&#039;s guess
-        user_guess = 0
+        user_guess = None
 
         print(
             user_name + &quot;, I&#039;m thinking of an integer in the interval [&quot;
