--- a/en/emc2/index.html
+++ b/en/emc2/index.html
@@ -38,7 +38,7 @@
 				<p class="subtleHeading">Problem written by Chris, discovered by Einstein</p>
 				<hr/>
 				<p>
-	One of the exciting human discoveries is that mass and energy are interchangable and are related by the equation E = <i>m</i> × C <sup>2</sup>. This relationship was uncovered by Albert Einstein almost 100 years ago and we now know that the sun produces its heat by transforming small amounts of mass into large amounts of energy.
+	One of the exciting human discoveries is that mass and energy are interchangable and are related by the equation E = <i>m</i> Ã— C <sup>2</sup>. This relationship was uncovered by Albert Einstein almost 100 years ago and we now know that the sun produces its heat by transforming small amounts of mass into large amounts of energy.
 </p>
 
 <p> Write a program that continually reads in mass from the user and then outputs the equivalent amount of energy. Show your work in the following way:</p>
@@ -47,9 +47,9 @@
 	<img style="width:400px" src="./demo.png">	
 </center>
 <p></p>
-<p>If you ask the user to input kilograms, and you use speed of light equals 299792458 (which is in meters per second) the result of calculating E = <i>m</i> × C <sup>2</sup> will be in Jouls.</p>
+<p>If you ask the user to input kilograms, and you use speed of light equals 299792458 (which is in meters per second) the result of calculating E = <i>m</i> Ã— C <sup>2</sup> will be in Jouls.</p>
 
-<p> Note that 3.0e+8 is scientific notation for 3.0 × 10 <sup>8</sup>... which is 300,000,000. You don't need to do anything for python to print floats in scientific notation. It will automatically do so when numbers get big enough.</p>
+<p> Note that 3.0e+8 is scientific notation for 3.0 Ã— 10 <sup>8</sup>... which is 300,000,000. You don't need to do anything for python to print floats in scientific notation. It will automatically do so when numbers get big enough.</p>
 <p>
 	Since the speed of light will never change, it makes sense to declare it as a constant.
 </p>
