--- a/en/temperature_convertor/index.html
+++ b/en/temperature_convertor/index.html
@@ -69,7 +69,15 @@
 </p>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:680.0px">
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:680.0px">
 def fahrenheit_to_celsius():
     # get the fahrenheit temperature from the user
     fahrenheit = float(input(&quot;Enter Temperature in Fahrenheit : &quot;))
@@ -104,6 +112,7 @@ def main():
 if __name__ == &#039;__main__&#039;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -115,6 +124,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
