--- a/en/number-guessing-game/index.html
+++ b/en/number-guessing-game/index.html
@@ -74,7 +74,15 @@ Please enter your guess:
 </pre>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:840.0px">import random
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:840.0px">import random
 
 MIN_NUMBER = 1
 MAX_NUMBER = 100
@@ -117,6 +125,7 @@ def main():
 if __name__ == &quot;__main__&quot;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -128,6 +137,16 @@ if __name__ == &quot;__main__&quot;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
