--- a/en/personality-quiz/index.html
+++ b/en/personality-quiz/index.html
@@ -98,7 +98,15 @@ Congratulations! You got 2 questions right!
 </ul>	
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:1540.0px">def main():
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:1540.0px">def main():
 	print(&quot;Welcome to the Quiz! How well do you know Daniel?&quot;)
 	print(&quot;Instructions: select your answer by inputing a, b, or c.&quot;)
 
@@ -175,6 +183,7 @@ def question_3():
 
 if __name__ == &#039;__main__&#039;:
 	main()</pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -186,6 +195,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
