--- a/en/small-primes/index.html
+++ b/en/small-primes/index.html
@@ -65,7 +65,15 @@ The 10 primes &lt;= 9999991 are:
 </pre>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:1640.0px">import time
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:1640.0px">import time
 
 UPPER_BOUND = 10000000  # Warning! Values &gt; 100,000,000 will take a LONG time.
 PRIMES_TO_SHOW = 10
@@ -148,6 +156,7 @@ def last_n_primes(primes, n):
 if __name__ == &quot;__main__&quot;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -159,6 +168,16 @@ if __name__ == &quot;__main__&quot;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
