--- a/examples/how-much-TP/index.html
+++ b/examples/how-much-TP/index.html
@@ -6,7 +6,7 @@ One of the most interesting phenomenon in the beginning of this global health cr
 </p>
 
 <p></p>
-<pre class="console" style="width:800px">
+<pre class="console">
 Enter the amount of rolls you have: <span class="blue">1</span>
 Enter the number of toilet visits per day: <span class="blue">2</span>
 How long = 160 sheets per roll * number of rolls / (6 sheets per toilet visit * toilet visit per day)...
