--- a/en/birthday-probability/index.html
+++ b/en/birthday-probability/index.html
@@ -94,7 +94,15 @@
 </pre>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:980.0px">&#039;&#039;&#039;
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:980.0px">&#039;&#039;&#039;
 what is the probability that two people in a group share the same birthday?
 prompt the user to enter the number of people in a group
 compute the probability that at least two people in the group share the same birthday
@@ -144,6 +152,7 @@ def main():
 if __name__ == &#039;__main__&#039;:
 	main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -155,6 +164,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
