--- a/en/8-ball/index.html
+++ b/en/8-ball/index.html
@@ -74,7 +74,15 @@ You do not have to have so many responses. Instead choose at least 5, or make up
 </body>
 </html>
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:940.0px">#a python script that gives random answers to questions being asked by the user
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:940.0px">#a python script that gives random answers to questions being asked by the user
 
 #an inbuilt module that enables the interpreter pick random values from
 #a defined range of options
@@ -122,6 +130,7 @@ if __name__ == &#039;__main__&#039;:
 
 
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -133,6 +142,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
