--- a/en/am_i_18/index.html
+++ b/en/am_i_18/index.html
@@ -58,7 +58,15 @@
 
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:260.0px">AGE_LIMIT = 18
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:260.0px">AGE_LIMIT = 18
 
 def main():
     age_str = input(&quot;Enter your age: &quot;)
@@ -71,6 +79,7 @@ def main():
 
 if __name__ == &#039;__main__&#039;:
     main()</pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -82,6 +91,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
