--- a/en/bouncing_billiards/index.html
+++ b/en/bouncing_billiards/index.html
@@ -63,7 +63,15 @@
     You can assume that all user inputs are valid, but note that the starting velocity of block&nbsp;2 does not have to be negative.
 </p>
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:1300.0px">SCHEMATIC = r&#039;&#039;&#039;
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:1300.0px">SCHEMATIC = r&#039;&#039;&#039;
               wall
                ||                 &lt;-- v2
                ||      v1       __________
@@ -129,6 +137,7 @@ def init():
 if __name__ == &#039;__main__&#039;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -140,6 +149,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
