--- a/en/lucky_draw/index.html
+++ b/en/lucky_draw/index.html
@@ -58,7 +58,15 @@
     <i>Extension</i>: What if Karel decides to have <i>k</i> lucky draw winners? How do you modify your program so that no more than <i>k</i> names are stored and each guest would have equal probability of being selected?
 </p>
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:500.0px">import random
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:500.0px">import random
 
 
 def main():
@@ -84,6 +92,7 @@ def main():
 if __name__ == &#039;__main__&#039;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -95,6 +104,16 @@ if __name__ == &#039;__main__&#039;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
