--- a/en/triangle-calculator/index.html
+++ b/en/triangle-calculator/index.html
@@ -107,7 +107,15 @@
 <p> You can assume that the user will always type correct input. They will correctly type a 1 or a 2 to answer the first question, and they will not input the side lengths of an impossible triangle.</p>
 
 				<h2>Solution</h2>
-				<pre class="console" id="editor" style="height:1100.0px">import math
+				<p>
+					<a class="btn btn-primary" id="soln-btn" onclick="toggleButtonText()"
+						data-toggle="collapse" href="#soln-collapse" aria-expanded="false" 
+						aria-controls="Collapse">
+						Show Solution
+					</a>
+				</p>
+				<div class="collapse" id="soln-collapse">
+					<pre class="console" id="editor" style="height:1100.0px">import math
 
 def main():
 
@@ -163,6 +171,7 @@ def main():
 if __name__ == &quot;__main__&quot;:
     main()
 </pre>
+				</div>
     
 <script src="../../plugins/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
@@ -174,6 +183,16 @@ if __name__ == &quot;__main__&quot;:
    editor.setFontSize("14px");
     /*editor.setTheme("ace/theme/eclipse");
     editor.getSession().setMode("ace/mode/java");*/
+</script>
+<script>
+	function toggleButtonText() {
+		var elem = document.getElementById("soln-btn");
+		if (elem.innerHTML.trim() === "Show Solution") {
+			elem.innerHTML = "Hide Solution";
+		} else {
+			elem.innerHTML = "Show Solution";
+		}
+	}
 </script>
 				<hr/>
 			</div>
