--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,7 @@
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="../../style.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 
 <!-- Java Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -39,27 +39,41 @@
 			<h1>Examples</h1>
 			<hr/>
 			<ol>
-				<li><a href="quadratic_formula/index.html">quadratic_formula</a></li>
-<li><a href="number-guessing-game/index.html">number-guessing-game</a></li>
-<li><a href="13coins/index.html">13coins</a></li>
-<li><a href="emc2/index.html">emc2</a></li>
-<li><a href="birthday-probability/index.html">birthday-probability</a></li>
-<li><a href="temperature_convertor/index.html">temperature_convertor</a></li>
-<li><a href="am_i_18/index.html">am_i_18</a></li>
-<li><a href="triangle-calculator/index.html">triangle-calculator</a></li>
-<li><a href="moonweight/index.html">moonweight</a></li>
-<li><a href="personality-quiz/index.html">personality-quiz</a></li>
-<li><a href="fibonacci-series/index.html">fibonacci-series</a></li>
-<li><a href="pi_estimator/index.html">pi_estimator</a></li>
-<li><a href="lucky_draw/index.html">lucky_draw</a></li>
-<li><a href="leap-year/index.html">leap-year</a></li>
-<li><a href="emc2-console/index.html">emc2-console</a></li>
-<li><a href="slot-machine/index.html">slot-machine</a></li>
-<li><a href="the_hardest_logic_puzzle_ever/index.html">the_hardest_logic_puzzle_ever</a></li>
-<li><a href="bouncing_billiards/index.html">bouncing_billiards</a></li>
-<li><a href="8-ball/index.html">8-ball</a></li>
-<li><a href="small-primes/index.html">small-primes</a></li>
-<li><a href="how-much-TP/index.html">how-much-TP</a></li>
+				<li><a href="quadratic_formula/index.html">Quadratic Equation Solver
+</a></li>
+<li><a href="number-guessing-game/index.html">Number Guessing Game
+</a></li>
+<li><a href="13coins/index.html">13 Coins
+</a></li>
+<li><a href="emc2/index.html">E=MC2</a></li>
+<li><a href="birthday-probability/index.html">Birthday Probability
+</a></li>
+<li><a href="temperature_convertor/index.html">Temperature Convertor
+</a></li>
+<li><a href="am_i_18/index.html">Am I 18+?</a></li>
+<li><a href="triangle-calculator/index.html">Triangle Calculator
+</a></li>
+<li><a href="moonweight/index.html">The title of this solved example is Moonweight (Python solution)
+</a></li>
+<li><a href="personality-quiz/index.html">Personality Quiz</a></li>
+<li><a href="fibonacci-series/index.html">Fibonacci Series Calculation</a></li>
+<li><a href="pi_estimator/index.html">Pi Estimator</a></li>
+<li><a href="lucky_draw/index.html">Lucky Draw
+</a></li>
+<li><a href="leap-year/index.html">Leap year</a></li>
+<li><a href="emc2-console/index.html">E=MC2</a></li>
+<li><a href="slot-machine/index.html">Slot machine
+</a></li>
+<li><a href="the_hardest_logic_puzzle_ever/index.html">The Hardest Logic Puzzle Ever
+</a></li>
+<li><a href="bouncing_billiards/index.html">Bouncing Billiards
+</a></li>
+<li><a href="8-ball/index.html">The title of this solved example is 8-Ball (Python solution)
+</a></li>
+<li><a href="small-primes/index.html">Small Primes
+</a></li>
+<li><a href="how-much-TP/index.html">How much toilet paper?
+</a></li>
 
 			</ol>
 		</div>
