--- a/en/am_i_18/index.html
+++ b/en/am_i_18/index.html
@@ -44,15 +44,12 @@
     which is the age for voting in most countries. 
 </p>
 <p>
-    Write a program that continiously takes a person's age as input and determines if a person can vote or not, that is, if he is older than 18 years old or not.
+    Write a program that takes a person's age as input and determines if a person can vote or not, that is, if he is older than 18 years old or not.
     If you want to finish the program, enter ctrl+c.
 </p>
 <pre class="console" style="width:800px">
     Enter your age: 12
     Sorry, you can't vote yet!
-    
-    Enter your age: 21
-    You're old enough to vote!
 
 </pre>
 
