--- a/examples/liftoff/index.html
+++ b/examples/liftoff/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Liftoff</title>
+</head>
+<body>
+Write a program in the file liftoff.py that prints out the calls for a spaceship that is
+about to launch. Countdown the numbers from 10 to 1 and then write “Liftoff!” Your
+program should include a for loop using range. A sample run of the program is below. <br>
+10 <br>
+9 <br>
+8 <br>
+7 <br>
+6 <br>
+5 <br>
+4 <br>
+3 <br>
+2 <br>
+1 <br>
+Liftoff!
+</body>
+</html>
