--- a/examples/Khan Sole Academy/index.html
+++ b/examples/Khan Sole Academy/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Khan Sole Academy</title>
+</head>
+<body>
+Now that you’ve seen how programming can help us in a number of different areas, it’s
+time for you to implement Khan-sole Academy—a program that helps other people learn!
+In this problem, you’ll write a program in the file <b> khansole_academy.py </b> that randomly
+generates simple addition problems for the user, reads in the answer from the user, and then
+checks to see if they got it right or wrong, until the user appears to have mastered the
+material. Note that “console” is another name for “terminal” :-). <br>
+More specifically, your program should be able to generate simple addition problems that
+involve adding two 2-digit integers (i.e., the numbers 10 through 99). The user should be
+asked for an answer to each problem. Your program should determine if the answer was
+correct or not, and give the user an appropriate message to let them know. Your program
+should keep giving the user problems until the user has gotten 3 problems <b><u>correct in a row.</u></b>
+<br>
+(Note: the number of problems the user needs to get correctly in a row to complete the
+program is just one example of a good place to specify a constant in your program).<br>
+A sample run of the program is shown below (user input is in <b> <i> italics</i></b>.)
+<br>
+<ul>
+<li> What is 51 + 79? <br>
+Your answer: <i> 120 </i> <br>
+    Incorrect. The expected answer is 130  </li> <br> <br>
 
+<li>What is 33 + 19? <br>
+Your answer: <i> 42 </i> <br>
+    Incorrect. The expected answer is 52 </li> <br><br>
+
+<li> What is 55 + 11? <br>
+Your answer: <i> 66 </i> <br>
+    Correct! You've gotten 1 correct in a row.</li> <br><br>
+
+<li> What is 84 + 25? <br>
+Your answer: <i> 109 </i> <br>
+    Correct! You've gotten 2 correct in a row.</li> <br> <br>
+
+<li> What is 26 + 58? <br>
+Your answer: <i> 74 </i> <br>
+    Incorrect. The expected answer is 84 </li> <br> <br>
+
+<li> What is 98 + 85? <br>
+Your answer: <i> 183 </i> <br>
+    Correct! You've gotten 1 correct in a row.</li> <br> <br>
+
+<li> What is 79 + 66? <br>
+Your answer: <i> 145 </i> <br>
+    Correct! You've gotten 2 correct in a row </li> <br> <br>
+
+<li> What is 97 + 20? <br>
+Your answer: <i> 117 </i> <br>
+    Correct! You've gotten 3 correct in a row </li> <br>
+</ul>
+Congratulations! You mastered addition. <br>
+As a side note, one of the earliest programs Mehran wrote (with his friend Matthew) when
+he was first learning how to program was very similar to Khan-Sole Academy and it was
+called “M&M’s Math Puzzles”. It was written in a language named BASIC, on a computer
+that had 4K of memory (that’s 4 Kilobytes) and used cassette tapes (the same kind used for
+music in the 1970’s) to store information. Yeah, Mehran is old.
+
+
+</body>
+</html>
