--- a/en/bouncing_billiards/index.html
+++ b/en/bouncing_billiards/index.html
@@ -44,7 +44,7 @@
     Karel is recently obsessed with playing billiard balls after being told that they encode an <a href="https://youtu.be/HEfHFsfGXjs">amazing secret</a>. For simplicity, let's consider a frictionless track on which two blocks can travel (see Figure&nbsp;1). There is also a rigid wall on the left. At the beginning, block&nbsp;1 is stationary and block&nbsp;2 may have a nonzero velocity.
 </p>
 <p>
-    Your task is to count <i>how many collisions would take place in total</i>. A collision can be either between the blocks or between block&nbsp;1 and the wall. An example is shown is Figure&nbsp;2, and there are <b>3</b> collisions. You can assume an idealized world where energy dissipation is negligible. Under this assumption, if the masses of block&nbsp;1 and block&nbsp;2 are <i>m</i><sub>1</sub> and <i>m</i><sub>2</sub>, and their velocities before the collision are <i>u</i><sub>1</sub> and <i>u</i><sub>2</sub>, then their velocities after the collision are (<a href="https://en.wikipedia.org/wiki/Elastic_collision#One-dimensional_Newtonian">see derivation</a>):
+    Your task is to count <i>how many collisions would take place in total</i>. A collision can be either between the blocks or between block&nbsp;1 and the wall. An example is shown in Figure&nbsp;2, and there are <b>3</b> collisions. You can assume an idealized world where energy dissipation is negligible. Under this assumption, after a block-wall collision, the speed of the block remains the same but becomes opposite in direction. For block-block collision, if the masses of block&nbsp;1 and block&nbsp;2 are <i>m</i><sub>1</sub> and <i>m</i><sub>2</sub>, and their velocities before the collision are <i>u</i><sub>1</sub> and <i>u</i><sub>2</sub>, then their velocities after the collision are (<a href="https://en.wikipedia.org/wiki/Elastic_collision#One-dimensional_Newtonian">see derivation</a>):
 </p>
 <p></p>
 <center>
@@ -115,7 +115,7 @@ def solve_velocities(m1, v1, m2, v2):
 
 
 def has_more_collision(v1, v2):
-    return not (v1 &gt;= 0 and v2 &gt;= 0 and v1 &lt;= v2)
+    return v1 &lt; 0 or v1 &gt; v2
 
 
 def welcome_message():
